# zixy

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build_docs.yml  build_wheels.yml  release.yml  release_crate.yml  tests.yml
zixy/: Cargo.toml  README.md
zixy-py/: Cargo.toml  pyproject.toml
zixy-py/_typing/sympy/: __init__.pyi
zixy-py/docs/: README.md  conf.py  index.md  justfile  pyproject.toml
zixy-py/docs/_templates/autosummary/: class.rst  module.rst
zixy-py/docs/examples/: basics.ipynb  features.ipynb
zixy-py/examples/: chem.ipynb
zixy-py/src/: lib.rs  utils.rs
zixy-py/src/cmpnt/: mod.rs  state_springs.rs
zixy-py/src/container/: coeffs.rs  map.rs  mod.rs
zixy-py/src/fermion/: mappings.rs  mod.rs  unordered_fermion_operator.rs
zixy-py/src/qubit/: clifford.rs  mod.rs  mode.rs  pauli.rs  springs.rs  state.rs  state_old.rs
zixy-py/test/: test_utils.py
zixy-py/test/container/: mock_cmpnts.py  test_cmpnts.py  test_coeffs.py  test_complex_sign.py  test_sign.py  test_symbolic.py  test_term_data.py  test_terms.py
zixy-py/test/qubit/pauli/: test_complex_sign_array.py  test_general_terms.py  test_num_ops.py  test_pauli_string.py  test_sign_array.py  test_strings.py  test_term_products.py  test_term_sum.py
zixy-py/test/qubit/state/: test_state_terms.py  test_string.py  test_string_pauli_mul.py
zixy-py/zixy/: __init__.py  _zixy.pyi  utils.py
zixy-py/zixy/container/: __init__.py  base.py  cmpnts.py  coeffs.py  data.py  mixins.py  terms.py
zixy-py/zixy/fermion/: __init__.py  mappings.py
zixy-py/zixy/qubit/: __init__.py  _strings.py  _terms.py
zixy-py/zixy/qubit/clifford/: __init__.py  gate_list.py
zixy-py/zixy/qubit/pauli/: __init__.py  _strings.py  _terms.py  num_ops.py
zixy-py/zixy/qubit/state/: __init__.py  _strings.py  _terms.py
zixy/benches/: bench_main.rs
zixy/benches/benchmarks/: tableau.rs
zixy/src/: lib.rs
zixy/src/cmpnt/: mod.rs  mode.rs  parse.rs  springs.rs  state_springs.rs
zixy/src/container/: bit_matrix.rs  errors.rs  map.rs  mod.rs  quicksort.rs  table.rs  traits.rs  two_bit_vec.rs  utils.rs
zixy/src/container/coeffs/: complex.rs  complex_sign.rs  mod.rs  real.rs  sign.rs  traits.rs  unity.rs  whole.rs
zixy/src/container/word_iters/: _word_iters.rs  lincomb.rs  mod.rs  set.rs  term_set.rs  terms.rs  traits.rs
zixy/src/fermion/: mod.rs  mode.rs  traits.rs
zixy/src/fermion/mappings/: bk.rs  jw.rs  mod.rs  operators.rs  paraparticular.rs  parity.rs  traits.rs
zixy/src/fermion/operator/: cmpnt.rs  cmpnt_list.rs  cre_or_ann.rs  mod.rs  products.rs  springs.rs
zixy/src/fermion/state/: cmpnt_list.rs  mod.rs
zixy/src/qubit/: clifford.rs  mod.rs  mode.rs  sparse_matrix.rs  test.rs  traits.rs
zixy/src/qubit/pauli/: mod.rs  springs.rs
zixy/src/qubit/pauli/cmpnt_major/: cmpnt.rs  cmpnt_list.rs  encoding.rs  lincomb.rs  mat_elem.rs  mod.rs  num_ops.rs  products.rs  term.rs  term_set.rs  terms.rs
zixy/src/qubit/pauli/mode_major/: array.rs  mod.rs  mode_major_vec.rs
zixy/src/qubit/state/: cmpnt.rs  cmpnt_list.rs  lincomb.rs  mod.rs  term_set.rs  terms.rs
zixy/src/utils/: arith.rs  io.rs  mod.rs
