[project]
name = "zixy"
version = "0.1.0-alpha.1"
requires-python = ">=3.10"
description = "Quantinuum's high performance library for the manipulation of Pauli strings and other quantum algebraic objects"
license = { file = "LICENCE" }
readme = "README.md"
authors = [
    { name = "Robert Anderson", email = "robert.anderson@quantinuum.com" },
    { name = "Oliver Backhouse", email = "oliver.backhouse@quantinuum.com" },
    { name = "Andrew Tranter", email = "andrew.tranter@quantinuum.com" },
]
maintainers = [
    { name = "Robert Anderson", email = "robert.anderson@quantinuum.com" },
    { name = "Oliver Backhouse", email = "oliver.backhouse@quantinuum.com" },
    { name = "Andrew Tranter", email = "andrew.tranter@quantinuum.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[tool.uv.workspace]
members = ["zixy-py"]

[tool.uv]

dev-dependencies = [
    "maturin >=1.7.0,<2",
    "pytest >=8.3.2,<9",
    "pytest-cov >=5.0.0,<6",
    "ruff >=0.6.2,<0.7",
    "mypy >=1.11.1,<2",
    "pandas-stubs>=2.0.0",
    "pre-commit >=3.8.0,<4",
    # Required to run `maturin develop`
    "pip >=24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.maturin]
# Maturin is not the build system for the workspace (it is only used for `zixy-py`).
# We mirror the `zixy-py/pyproject.toml` config here so `maturin develop` still works
# from the root of the workspace.
manifest-path = "zixy-py/Cargo.toml"
python-source = "zixy-py"
module-name = "zixy._zixy"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[tool.mypy]
exclude = '''(?x)(
    ^target/        # Build artifacts
    | ^notebooks/   # Examples
    | ^test_files/  # Test files
)'''

# TODO: Fix the lint errors and enable this
#strict = true

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing coverage on typing imports
    "if TYPE_CHECKING:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "raise InternalGuppyError",

    # Don't complain about abstract methods, they aren't run:
    "@abstractmethod",
]
