[project]
name = "zixy"
version = "0.1.0-alpha.1"
requires-python = ">=3.10"
description = "Quantinuum's high performance library for the manipulation of Pauli strings and other quantum algebraic objects"
license = { file = "LICENCE" }
readme = "../README.md"
authors = [
    { name = "Robert Anderson", email = "robert.anderson@quantinuum.com" },
    { name = "Oliver Backhouse", email = "oliver.backhouse@quantinuum.com" },
    { name = "Andrew Tranter", email = "andrew.tranter@quantinuum.com" },
]
maintainers = [
    { name = "Robert Anderson", email = "robert.anderson@quantinuum.com" },
    { name = "Oliver Backhouse", email = "oliver.backhouse@quantinuum.com" },
    { name = "Andrew Tranter", email = "andrew.tranter@quantinuum.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.15.2",
    "sympy>=1.14.0",
    "pandas>=2.2.3",
    "typing_extensions>=4.9.0",
]

[project.urls]
homepage = "https://github.com/quantinuum/zixy/tree/main"
repository = "https://github.com/quantinuum/zixy/tree/main"

[build-system]
requires = ["maturin~=1.7"]
build-backend = "maturin"

[tool.maturin]
# Make sure to copy any changes to the root `pyproject.toml` config too.
module-name = "zixy._zixy"
manifest-path = "Cargo.toml"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
# Lark throws deprecation warnings for `src_parse` and `src_constants`.
filterwarnings = "ignore::DeprecationWarning:lark.*"

[tool.pyright]
# Rust bindings have typing stubs but no python source code.
reportMissingModuleSource = "none"

[tool.ruff]
line-length = 100
extend-exclude = ["*.ipynb"]
include = ["pyproject.toml", "zixy/**/*.py", "test/**/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = [
    "E",  # pycodestyle (errors)
    "W",  # pycodestyle (warnings)
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "PL",  # pylint
    "UP",  # pyupgrade
    "SIM",  # flake8-simplify
    "CPY",  # flake8-copyright
    "TID",  # flake8-tidy-imports
    "NPY",  # NumPy-specific rules
]
ignore = [
    "PLC2801",  # unnecessary-dunder-call
    "PLR09",  # too-many-x
    "PLR1714",  # repeated-equality-comparison
    "PLR2004",  # magic-value-comparison
    "PLW1641",  # eq-without-hash
    "PLW2901",  # redefined-loop-name
]

[tool.ruff.lint.per-file-ignores]
"zixy/**/__init__.py" = [
    "I001",  # unsorted-imports
    "F401",  # unused-import
]
"test/**/*.py" = [
    "CPY",  # flake8-copyright
    "D",  # pydocstyle
    "E501",  # line-too-long
    "E731",  # do-not-assign-lambda
    "E741",  # ambiguous-variable-name
    "PLC",  # pylint (convention)
    "PLR",  # pylint (refactor)
    "PLW",  # pylint (warning)
    "SIM",  # flake8-simplify
    "UP018",  # native-literals
]

[tool.ruff.lint.isort]
known-first-party = ["zixy"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
mypy_path = "_typing"
