[package]
name = "zixy"
version = "0.2.2"
edition = { workspace = true }
rust-version = { workspace = true }
license = "Apache-2.0"
description = "Quantinuum's high performance Rust crate for the manipulation of Pauli strings and other quantum algebraic objects."

[dependencies]
itertools = {workspace = true}
num-complex = {workspace = true}
rand = {workspace = true}
sprs = {workspace = true}
indexmap = {workspace = true}
pluralizer = {workspace = true}
serde = {workspace = true}
bincode = {workspace = true}
enum_dispatch = {workspace = true}
ndarray = {workspace = true}
num_enum = "0.7"
num-traits = "0.2"

[dev-dependencies]
rstest = { workspace = true }

criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
