[project]
name ="zixy-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "furo>=2025.9.25",
    "myst-nb>=1.3.0",
    "sphinx-copybutton",
    "pandas>=2.3.3",
    "scipy",
    "zixy==0.2.2",
    "sphinx-autodoc-typehints>=3.6.3",
]
